# MyMusic

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lqk/mymusic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lqk/mymusic/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/lqk/mymusic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libmyplayer/: CMakeLists.txt  build.gradle
libmyplayer/src/androidTest/java/com/lqk/libmyplayer/: ExampleInstrumentedTest.java
libmyplayer/src/main/: AndroidManifest.xml
libmyplayer/src/main/cpp/: AndroidLog.h  Audio.cpp  Audio.h  FFmpeg.cpp  FFmpeg.h  JavaMethod.cpp  JavaMethod.h  native-lib.cpp
libmyplayer/src/main/java/com/lqk/libmyplayer/: JniTest.java
libmyplayer/src/main/java/com/lqk/libmyplayer/listener/: LqkOnPreparedListener.java
libmyplayer/src/main/java/com/lqk/libmyplayer/log/: MyLog.java
libmyplayer/src/main/java/com/lqk/libmyplayer/player/: LqkPlayer.java
libmyplayer/src/main/res/values/: strings.xml
libmyplayer/src/test/java/com/lqk/libmyplayer/: ExampleUnitTest.java
